Sat Aug 18 23:01:33 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.h: Really remove set_default_style().

	* docs/Changes-2.0.txt: added a note about
	gtk_widget_push/pop/set_default_style.

2001-08-18  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkwindow.c (gtk_window_move_resize): constrain position on
	hints_changed in addition to the other cases.
	(gtk_window_move_resize): include last position from configure
	notify in debug spew

2001-08-18  James Henstridge  <james@daa.com.au>

	* gtk/gtkaccelgroup.c (gtk_accel_group_object_destroy): use the
	second argument to the weak ref notify, cleaning up some uglyness.
	(gtk_accel_group_attach): remove and add the weak notifier when
	changing the accel groups slist.
	(gtk_accel_group_detach): same here.

2001-08-17  Darin Adler  <darin@bentspoon.com>

	* gtk/gtktreeview.c: (gtk_tree_view_search_equal_func): Add
	missing parameters to utf8 functions to make it compile.

Fri Aug 17 19:30:14 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeprivate.h:
	* gtk/gtktreeview.c: (gtk_tree_view_class_init),
	(gtk_tree_view_init), (gtk_tree_view_set_property),
	(gtk_tree_view_get_property), (gtk_tree_view_destroy),
	(gtk_tree_view_key_press), (gtk_tree_view_leave_notify),
	(gtk_tree_view_focus_out), (gtk_tree_view_set_model),
	(gtk_tree_view_set_destroy_count_func),
	(gtk_tree_view_set_enable_search),
	(gtk_tree_view_get_enable_search),
	(gtk_tree_view_get_search_column),
	(gtk_tree_view_set_search_column),
	(gtk_tree_view_get_search_equal_func),
	(gtk_tree_view_set_search_equal_func),
	(gtk_tree_view_search_dialog_destroy),
	(gtk_tree_view_search_position_func),
	(gtk_tree_view_interactive_search),
	(gtk_tree_view_search_delete_event),
	(gtk_tree_view_search_button_press_event),
	(gtk_tree_view_search_key_press_event),
	(gtk_tree_view_search_move), (gtk_tree_view_search_equal_func),
	(gtk_tree_view_search_iter), (gtk_tree_view_search_init):
	* gtk/gtktreeview.h: